# gpmsdb-desktop-workbench

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: build-windows-exe.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/tests/: smoke.rs
apps/desktop/src-tauri/tests/fixtures/: query-a.mgf  query-b.txt
crates/gpmsdb-builder/: Cargo.toml
crates/gpmsdb-builder/examples/: export_sample_queries.rs
crates/gpmsdb-builder/src/: lib.rs  main.rs  materialize.rs  streaming_pickle.rs
crates/gpmsdb-builder/tests/: builder_pipeline.rs  protocol4_streaming.rs
crates/gpmsdb-engine/: Cargo.toml
crates/gpmsdb-engine/benches/: search_bench.rs
crates/gpmsdb-engine/src/: batch.rs  coarse.rs  lib.rs  rerank.rs  types.rs
crates/gpmsdb-engine/tests/: mmap_loader.rs  search_pipeline.rs
crates/gpmsdb-format/: Cargo.toml
crates/gpmsdb-format/src/: header.rs  index.rs  lib.rs  meta.rs  (+1 more)
docs/: 桌面版使用说明.md
docs/architecture/: db-format.md
tests/: conftest.py
tests/tools/: test_converter_cli.py  test_converter_small_fixture.py  test_format_layout.py  test_validator.py
tools/pickle_to_mmap/: __init__.py  binning.py  convert_gpmsdb.py  format.py  validate_gpmsdb.py
提交文件/: README.md  简要使用操作说明文档.md  项目说明文档.md
提交文件/构建产物/: README.md
提交文件/源码包/: README.md
(+17 files in other folders)
