[package]
name = "gpmsdb-builder"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gpmsdb-builder"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.6.0", features = ["derive"] }
crc32fast = "1.4"
gpmsdb-format = { path = "../gpmsdb-format" }
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde-pickle = "1.2.0"
thiserror = "2"

[dev-dependencies]
tempfile = "3.13"
