[package]
name = "gpmsdb-desktop-tauri"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "gpmsdb-desktop-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
gpmsdb-builder = { path = "../../../crates/gpmsdb-builder" }
gpmsdb-engine = { path = "../../../crates/gpmsdb-engine" }
gpmsdb-format = { path = "../../../crates/gpmsdb-format" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"

[dev-dependencies]
tempfile = "3.13"
